Fixing css for add to cart button on mobile view

--- a/src/app/components/card/card.module.css
+++ b/src/app/components/card/card.module.css
@@ -26,7 +26,7 @@
   padding: 15px;
   border-radius: 12px;
   background-color: var(--card-background);
-  margin-bottom: 10px;
+  margin-bottom: 2rem;
 }
 
 .content:hover {
